# nerdicons-rs

./: Cargo.toml  LICENSE  README.md  build.rs
src/: icons.rs  lib.rs
