[package]
name = "nerdicons_rs"
version = "0.1.0"
edition = "2024"
authors = ["Obito <obitodih@gmail.com>"]
description = "Access all NerdFonts Icons and Use It"
license = "MIT"
repository = "https://github.com/obitoc/nerdicons-rs"
readme = "README.md"
documentation = "https://docs.rs/nerdicons_rs"
keywords = ["nerdfonts", "icons", "unicode", "font"]
categories = ["text-processing", "value-formatting"]
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "build.rs",
  "glyphnames.json",
  "LICENSE"
]
[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


[[bin]]
name = "nerdicons-gen-rs"
path = "./build.rs"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


